# userAuth

./: .gitignore  README.md  pyproject.toml
Docker/: DockerFileBe  DockerFileFe  demo.env  docker-compose-dev-be.yml  docker-compose-dev-fe.yml
core/: settings.py
frontend/: package.json
